docs(m0): qualifier scip-java avec le JDK 24 de référence